# imu_viz_pradeep

./: README.md
ESP32-Body-Tracking-System1/: README.md  cmake.txt
ESP32-Body-Tracking-System1/visualizer/include/: MathTypes.h  Model.h  MotionRecorder.h  Network.h  Renderer.h  Skeleton.h
ESP32-Body-Tracking-System1/visualizer/src/: Model.cpp  MotionRecorder.cpp  Network.cpp  Renderer.cpp  main.cpp
bharatanatyam_viz_v6/: CMakeLists.txt
bharatanatyam_viz_v6/visualizer/include/: MathTypes.h  Model.h  MotionRecorder.h  Network.h  Renderer.h  Skeleton.h
bharatanatyam_viz_v6/visualizer/src/: Model.cpp  MotionRecorder.cpp  Network.cpp  Renderer.cpp  main.cpp
imu_viz_final/: CMakeLists.txt  csv_logger.cpp  csv_logger.h  gltf_model.cpp  gltf_model.h  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h  sensor_manager.cpp  sensor_manager.h  udp_receiver.cpp  udp_receiver.h
project/: CMakeLists.txt  README.md
project/firmware/: platformio.ini
project/firmware/src/: main.cpp
project/visualizer/include/: MathTypes.h  Model.h  MotionRecorder.h  Renderer.h  Skeleton.h
project/visualizer/src/: Model.cpp  MotionRecorder.cpp  Network.cpp  Renderer.cpp  main.cpp
